# adk8cy_DS5111su24_lab_01

./: .gitignore  LICENSE  Makefile  README.md  get_the_books.sh  pyproject.toml  pytest.ini  requirements.txt  test_tokenize.py  test_tokenizer.py  tokenize.py  tokenizer.py
.github/workflows/: validations.yml
src/adk8cy/: __init__.py  get_the_books.sh  tokenizer.py
tests/: test_clean_text.py  test_count_words.py  test_file_processing.py  test_tokenizer.py
