[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adk8cy"
version = "0.0.2"
authors = [{ name="Aveline Knoop", email="adk8cy@virginia.edu" },]
description = "A package to retrieve and analyze books."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"